# MMUH22-Structures-Algoritm

./: .gitignore  README.md  storage.py
Assignment 1_2/: README.md
Assignment 1_2/Cpp/: CMakeLists.txt  deck.cpp  main.cpp  test_deck.cpp
Assignment 1_2/Cpp/include/: deck.h
Assignment 1_2/python/: deck.py  test_deck.py
Assignment_2/: argv_print.cpp  file_crawler  main  recursive_dir.cpp  run.sh
Assignment_2/TestData/: Ost.md
Assignment_2/TestData/Drycker/: Vatten.md
Cpp/: main  run.sh  storage  storage.cpp  test_storage.cpp
Python/: factorial.py  list_sum.py  power.py  statistics.py  trace_fuc.py
ovningsuppgiter/: bubble_sort.cpp  factorial.cpp  kommunikation.cpp  list_sum.cpp  main  power.cpp  run.sh  tree.cpp  vector.cpp
queue/: Makefile
queue/lib/queue/: queue.c  queue.h
queue/test/: test_queue.c
